--- a/views/location.handlebars
+++ b/views/location.handlebars
@@ -25,7 +25,7 @@
       <div class="columns is-flex-wrap-wrap has-text-centered is-mobile">
         {{#each merchantInfo.items as |merchantItem|}}
           <div
-            class="column is-three-quarters-mobile is-two-thirds-tablet is-half-desktop is-one-third-widescreen is-one-quarter-fullhdis-mobile is-4"
+            class="column is-one-third-mobile is-half-tablet is-half-desktop is-one-third-widescreen is-one-third-fullhd"
           >
             <div class="container">
               <div class="card mt-4" data-id="{{merchantItem.id}}">
@@ -69,7 +69,7 @@
       >
         {{! a card for each item will appear with a button to sell }}
         {{#each playerInfo.items as |playerItem|}}
-          <div class="column is-mobile is-4">
+          <div class="column is-mobile is-one-third-mobile is-half-tablet is-half-desktop is-one-third-widescreen is-one-third-fullhd">
             <div class="container">
               <div class="card mt-4" data-id="{{playerItem.id}}">
                 <div class="card-content">
