--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,37 +46,39 @@ body:before {
 }
 
 
-.login-form p {
+.card p {
 	margin: 0;
 	padding: 0;
 	font-weight: bold;
-	color: #fff;
+	color: rgb(7, 6, 6);
+	font-size: 16px;
 }
 .login-form input {
 	width: 100%;
 	margin-bottom: 20px;
 }
-.login-form input[type=email],[type=password],[type=text],[type=date] {
+.content [type=email],[type=password],[type=text],[type=date] {
 	border: none;
 	border-bottom: 1px solid #fff;
 	background: transparent;
 	outline: none;
 	height: 40px;
-	color: black;
-	font-size: 16px;
+	color:floralwhite;
+	font-size: 20px;
+	font: bold;
 }
-.login-form input[type=submit] {
-	height: 30px;
+.card-input[type=submit][type=submit] {
+	height: 40px;
 	color: #fff;
-	font-size: 15px;
+	font-size: 20px;
 	background:brown;
 	cursor: pointer;
 	border-radius: 25px;
 	border: none;
 	outline: none;
-	margin-top: 15%;
+	margin-top: 20%;
 }
-.login-form a {
+.card-a {
 	color: #fff;
 	font-size: 14px;
 	font-weight: bold;
@@ -89,10 +91,29 @@ input[type=checkbox] {
 	background: transparent;
 	border-style:inherit;
 	border:solid black;
-	border-radius: 5px;
-	;
+	border-radius: 10px;
+	background: rgba(0, 0, 0, 0.5);
+	background-image: url("../images/door.jpeg");
+	background-position: center center;
+
+	
+	
+}
+image{
+	opacity: 0.4;
+}
+.button{
+	border: white;
+	color: grey;
+}
+
+.card label{
+	font-size: 16px;
+	color: black;
 
 }
+
+
 
 .login-form-member {
 	position: absolute;
@@ -106,15 +127,6 @@ input[type=checkbox] {
 
 }
 
-.avatar-member {
-	position: absolute;
-	width: 80px;
-	height: 80px;
-	border-radius: 50%;
-	overflow: hidden;
-	top: calc(-90px/2);
-	left: 160px;
-}
 
 .navbar is-transparent{
 	content: '';
@@ -132,14 +144,16 @@ input[type=checkbox] {
 	filter: blur(6px);
 }
 
-.card-content{
+/*.container{
 	position: absolute;
-	top: 50%;
+	top: 40%;
 	left: 50%;
+	margin-top: 40px;
 	transform: translate(-50%, -50%);
 	width: 100%;
-	height: 450px;
-	padding: 300px 40px;
+	height: 50%;
+	padding: 50px 40px;
 	background: rgba(0, 0, 0, 0.5);
+	
 	
 }
